Days/day-12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/auth-type: "basic"
    # nginx.ingress.kubernetes.io/auth-secret: "giropops-senhas-users"
    # nginx.ingress.kubernetes.io/auth-realm: "Autenticação Necessaria"
    # # cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "giropops-cookie"
    cert-manager.io/issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/limit-rps: "20"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - senhas.israeldoamaral.com.br
    secretName: israeldoamaral.com.br-tls
  rules:
  - host: senhas.israeldoamaral.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: giropops-senhas
              port:
                number: 5000
